@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.mule.distributions</groupId>
         <artifactId>mule-embedded</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.7.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -14,6 +14,13 @@
     <name>Mule Embedded Implementation</name>
 
     <properties>
+        <surefire.args>
+            -XX:+IgnoreUnrecognizedVMOptions
+            --add-reads=org.mule.distribution.embedded.impl=org.apache.commons.lang3
+            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.util=ALL-UNNAMED
+            ${surefire.args.base}
+        </surefire.args>
+
         <javaModuleName>org.mule.distribution.embedded.impl</javaModuleName>
         <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
