@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.mule.distributions</groupId>
         <artifactId>mule-embedded</artifactId>
-        <version>4.5.0-SNAPSHOT</version>
+        <version>4.7.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,11 +13,19 @@
     <name>Mule Embedded Implementation Tests</name>
 
     <properties>
+        <surefire.args>
+            --add-reads=org.mule.distribution.embedded.test=org.apache.commons.lang3
+            --add-exports=org.mule.distribution.embedded.test/org.mule.runtime.module.embedded=junit
+            --add-opens=java.base/java.lang=org.mule.runtime.jpms.utils
+            ${surefire.test.unit.open.args}
+        </surefire.args>
+
         <javaModuleName>org.mule.distribution.embedded.test</javaModuleName>
         <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
         <settingsFile>${java.io.tmpdir}/effective-settings.xml</settingsFile>
-        <packagerVersion>3.1.6</packagerVersion>
+
+        <packagerVersion>4.0.0</packagerVersion>
     </properties>
 
     <build>
@@ -80,6 +88,28 @@
             <artifactId>zip4j</artifactId>
             <version>2.11.3</version>
         </dependency>
+        
+        <!--
+            This is only needed because the requirement of `org.slf4j` in the boot layer messes
+            with the `log4j` implementation in the class loader created by `mule-embedded-api`, and the fix is to provide
+            it also at the boot layer level.
+        -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.mule.tests</groupId>
@@ -89,6 +119,7 @@
         <dependency>
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
+            <scope>test</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.httpcomponents</groupId>
